# directory-storage-analyzer

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.serena/: project.yml
src/directory_storage_analyzer/: __init__.py  __main__.py  analysis.py  app.py  cache.py  callbacks.py  charts.py  cli.py  config.py  constants.py  filters.py  layout.py  profiling.py  tables.py
tests/: test_analysis.py  test_app.py  test_config.py  test_filters.py
